# zdzdzdzdz

./: Ghost.py  config.json  features.txt  pyproject.toml  richpresence.json
data/: Thumbs.db  logins.txt
themes/: Ghost.json
