[tool.poetry]
name = "repl_python3_beta_Ghost"
version = "0.1.0"
description = ""
authors = ["Nodisponible2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-webhook = "^0.16.0"
psutil = "^5.9.0"
GPUtil = "^1.4.0"
sounddevice = "^0.4.4"
winshell = "^0.6"
WMI = "^1.5.1"
aiohttp = "^3.8.1"
colour = "^0.1.5"
random-user-agent = "^1.0.1"
discord = "^1.7.3"
pygame = "^2.1.2"
colorama = "^0.4.4"
Faker = "^13.7.0"
names = "^0.3.0"
pync = "^2.0.3"
simplejson = "^3.17.6"
plyer = "^2.0.0"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
